public interface Button {
    public void draw();
}
