interface ButtonFactory {
    Button getMinimizeButton();
    Button getMaximizeButton();
    Button getCloseButton();
}