public class CircleCloseButton extends CloseButton {
    @Override
    public void draw() {
        System.out.print("(X)");
    }
}
