public class CircleMaximizeButton extends MaximizeButton {
    @Override
    public void draw() {
        System.out.print("(+)");
    }
}
