public class CircleMinimizeButton extends MinimizeButton {
    @Override
    public void draw() {
        System.out.print("(-)");
    }
}
