public abstract class CloseButton implements Button {

}
