public abstract class MaximizeButton implements Button {
    
}
