public abstract class MinimizeButton implements Button {

}
