public class SquareCloseButton extends CloseButton {
    @Override
    public void draw() {
        System.out.print("[X]");
    }
}
