public class SquareMaximizeButton extends MaximizeButton {
    @Override
    public void draw() {
        System.out.print("[+]");
    }
}
