public class SquareMinimizeButton extends MinimizeButton {
    @Override
    public void draw() {
        System.out.print("[-]");
    }
}
